[package]
name = "xlive-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", features = ["serde"] }
rml_rtmp = "^0.3"
thiserror = "^1.0"
anyhow = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
futures = "0.3.5"
tokio-util = { version = "0.6.2", features = ["codec"] }
tokio-stream = { version = "0.1.2", features = ["time"] }
bincode = "^1.3"
serde_json = {version="^1.0"}
env_logger = "0.6.0"
chrono="*"
tokio = { version = "1.14.0", features = ["full", "tracing"] }
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"],optional = true}
core={path="../xlive-core"}
structopt = { version = "0.3", default-features = false }

[features]
default = ["http-flv","monitor"]
http-flv=["hyper"]
monitor=["hyper"]

[[bin]]
name="xlive-edge"
path="src/main.rs"