[package]
name = "xlive-origin"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.14.0", features = ["full", "tracing"] }
futures = "0.3.5"
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-stream = { version = "0.1.2", features = ["time"] }
thiserror = "^1.0"
anyhow = "1.0"
log = "^0.4"
bytes = { version = "1", features = ["serde"] }
env_logger = "0.9.0"
chrono="*"
serde = { version = "^1.0", features = ["derive"] }
serde_json = {version="^1.0"}
core={path="../xlive-core"}
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"],optional = true}
structopt = { version = "0.3", default-features = false }

[features]
default = ["monitor"]
monitor = ["hyper"]

[[bin]]
name="xlive-origin"
path="src/main.rs"